@@ -1,3 +1,4 @@
+ - Create missing directories if specified as part of file names
  - Allow re-use of preconditioners (only PETSc for now)
  - Fixes for UMFPACK solver on some 32 machines
  - Provide access to more Hypre preconditioners via PETSc
